Fix z-index problem with FAB and notification

--- a/projects/app/src/app/common/components/notification/notifications-host/notifications-host.component.scss
+++ b/projects/app/src/app/common/components/notification/notifications-host/notifications-host.component.scss
@@ -5,6 +5,7 @@
   z-index: 2;
   transition: 0.3s all ease-out;
   opacity: 0;
+  z-index: 3;
 
   &.-position-top-right {
     top: 2rem;
